# djangocms-page-tags

./: .bumpversion.cfg  .checkignore  .codeclimate.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  cms_helper.py  pyproject.toml  requirements-docs.txt  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: lint.yml  test.yml
.tx/: config
changes/: 10210.feature
djangocms_page_tags/: __init__.py  admin.py  cms_toolbar.py  cms_toolbars.py  models.py  utils.py
djangocms_page_tags/locale/ar/LC_MESSAGES/: django.mo  django.po
djangocms_page_tags/locale/de/LC_MESSAGES/: django.mo  django.po
djangocms_page_tags/locale/en/LC_MESSAGES/: django.mo  django.po
djangocms_page_tags/locale/es/LC_MESSAGES/: django.mo  django.po
djangocms_page_tags/locale/it/LC_MESSAGES/: django.mo  django.po
djangocms_page_tags/locale/lt/LC_MESSAGES/: django.mo  django.po
djangocms_page_tags/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
djangocms_page_tags/locale/ru/LC_MESSAGES/: django.mo  django.po
djangocms_page_tags/locale/tr/LC_MESSAGES/: django.mo  django.po
djangocms_page_tags/migrations/: 0001_initial.py  0002_auto__add_titletags.py
djangocms_page_tags/south_migrations/: 0001_initial.py
djangocms_page_tags/static/css/djangocms_page_tags/: djangocms_page_tags_admin.css
djangocms_page_tags/static/djangocms_page_tags/css/: djangocms_page_tags_admin.css
djangocms_page_tags/templates/djangocms_page_tags/template/: page_tags.html
djangocms_page_tags/templates/djangocms_page_tags/templatetags/: page_tags.html  title_tags.html
djangocms_page_tags/templatetags/: page_tags.py
docs/: autodoc.rst  conf.py  index.rst  installation.rst  usage.rst
tests/: __init__.py  test_general.py  test_templatetags.py  test_toolbar.py
tests/test_utils/: urls.py
tests/test_utils/templates/: page.html  page_tags.html
