[bumpversion]
current_version = 0.9.0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.?)(?P<release>[a-z]*)(?P<relver>\d*)
serialize = 
	{major}.{minor}.{patch}.{release}{relver}
	{major}.{minor}.{patch}
commit = True
tag = True
sign_tags = True
tag_name = {new_version}
message = Release {new_version}

[bumpversion:part:release]
optional_value = gamma
values = 
	dev
	a
	b
	rc
	gamma

[bumpversion:file:djangocms_page_tags/__init__.py]

[metadata]
name = djangocms-page-tags
version = attr: djangocms_page_tags.__version__
url = https://github.com/nephila/djangocms-page-tags
project_urls = 
	Documentation = https://djangocms-page-tags.readthedocs.io/
author = Iacopo Spalletti
author_email = i.spalletti@nephila.it
description = Tagged pages for django CMS 3
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
keywords = djangocms-page-tags
classifiers = 
	Development Status :: 5 - Production/Stable
	Framework :: Django
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8

[options]
include_package_data = True
install_requires = 
	django-cms>=3.7
	django-taggit>=0.11.2
	django-taggit-autosuggest
	django-classy-tags>=0.3.4.1
setup_requires = 
	setuptools
packages = djangocms_page_tags
python_requires = >=3.6
test_suite = cms_helper.run
zip_safe = False

[options.package_data]
* = *.txt, *.rst
djangocms_page_tags = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.extras_require]
docs = 
	django<3.1

[upload]
repository = https://upload.pypi.org/legacy/

[sdist]
formats = zip

[bdist_wheel]
universal = 1
