[metadata]
name = djangocms-page-tags
version = attr: djangocms_page_tags.__version__
url = https://github.com/nephila/djangocms-page-tags
project_urls =
	Documentation = https://djangocms-page-tags.readthedocs.io/
author = Iacopo Spalletti
author_email = i.spalletti@nephila.digital
description = Tagged pages for django CMS 3
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
keywords = djangocms-page-tags
classifiers =
	Development Status :: 5 - Production/Stable
	Framework :: Django
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Framework :: Django
	Framework :: Django :: 3.2
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
include_package_data = True
install_requires =
	django-cms>=3.7
	django-taggit>=0.11.2
	django-taggit-autosuggest
	django-classy-tags>=0.3.4.1
setup_requires =
	setuptools
packages = djangocms_page_tags
python_requires = >=3.7
test_suite = cms_helper.run
zip_safe = False

[options.package_data]
* = *.txt, *.rst
djangocms_page_tags = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.extras_require]
docs =
	django<6.0

[sdist]
formats = zip

[bdist_wheel]
universal = 1
